GC 与各种引用